Fix read more links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>
       <div id="post-content">
         <p>Positioning CSS elements can be a major headache. The browser has <i>ideas</i> about where things should go, and… well, it’s trying it’s best. Often the best course of action is to just tell it where to put things on the webpage. But there’s a lot of ways of doing that, and picking the right one at the right time can save you from finding fun formatting surprises later on in designing your page.
-          The default position for an element is static. That just means “it goes where it goes”. That’s boring, so lets skip to the interesting ones.<a href="https:/svalbird.github.io/blog/html-css.html"> Read More</a></p>
+          The default position for an element is static. That just means “it goes where it goes”. That’s boring, so lets skip to the interesting ones.</p>
+          <p><a href="blog/html-css.html">Read More</a></p>
       </div>
     </div>
     </div>
