--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <title>Randle's Blog</title>
   </head>
   <body>
-    <!-- Background -->
-  <div id="page-background">
     <!-- Header -->
-  <div id="header">
+  <header>
     <a href="https://svalbird.github.io"><h1 class="head-text">Randle's Blog</h1> 
     <p class="tagline">(or inane ramblings)</p></a>
-  </div>
+  </header>
   <!-- Main body -->
-  <div id="main-body">
+  <main>
     <!-- Blog post -->
-    <div id="blog-post">
+    <article>
       <div id="post-title">
         <h2>CSS: Getting in the right position</h2>
         <p class="current-date"><i>18 January 2022</i></p>
@@ -31,8 +29,7 @@
           The default position for an element is static. That just means “it goes where it goes”. That’s boring, so lets skip to the interesting ones.</p>
           <p><a href="blog/html-css.html">Read More</a></p>
       </div>
-    </div>
-    </div>
-  </div>
+    </article>
+  </main>
   </body>
 </html>
