Add Identity & Values and Learning Plan posts

--- a/index.html
+++ b/index.html
@@ -30,6 +30,34 @@
           <p><a href="blog/html-css.html">Read More</a></p>
       </div>
     </article>
+    <article>
+      <div id="post-title">
+        <h2>Identity, Values, and Strengths</h2>
+        <p class="current-date"><i>22 January 2022</i></p>
+      </div>
+      <div id="post-content">
+        These are a look my my identity, core values, and strengths.
+          <ol>
+            <b><p><li>Explain a situation where you have made an ethical decision. Discuss how you weighed up the values involved in that decision, the decision you made, and how you reflect on the decision now.</li></b>
+            <br>I once covered up my test because I knew someone was cheating off of it. I could have let him cheat, but I decided that it wasn’t okay. I am happy with my decision as I hope it encouraged him to cheat less...</p>
+          </ol>
+          <p><a href="blog/identity-values.html">Read More</a></p>
+      </div>
+    </article>
+    <article>
+      <div id="post-title">
+        <h2>My Learning Plan</h2>
+        <p class="current-date"><i>22 January 2022</i></p>
+      </div>
+      <div id="post-content">
+        This is my learning plan for Dev Academy.
+          <ol>
+          <b><li>What is your long term goal or career pathway?</li></b>
+          <br>My long-term goal is to work as a software developer of some kind, whether that is in websites or web apps, or some other technology. I love programming, and I want my career to include it in some fashion...
+          </ol>
+          <p><a href="blog/learning-plan.html">Read More</a></p>
+      </div>
+    </article>
   </main>
   </body>
 </html>
