Added EQ and JS pages, fixed dates

--- a/index.html
+++ b/index.html
@@ -21,8 +21,28 @@
     <!-- Blog post -->
     <article>
       <div id="post-title">
+        <h2>Emotional Intelligence</h2>
+        <p class="current-date"><i>29 January 2023</i></p>
+      </div>
+      <div id="post-content">
+        <p>Emotional intelligence is a skill in which you can manage and interpret your own emotions and the emotions of others. This is a very key skill in everyday life, as well as in professional settings.</p>
+          <p><a href="blog/emotional-intelligence.html">Read More</a></p>
+      </div>
+    </article>
+    <article>
+      <div id="post-title">
+        <h2>Chill Javascript Vibes</h2>
+        <p class="current-date"><i>29 January 2023</i></p>
+      </div>
+      <div id="post-content">
+        <p>Web design is like a house. HTML is the foundation and the walls. It’s the base structure, but it’s not exactly functional or helpful in many contexts – not really a house that’s fun to live in. CSS is the paint, the art on the walls, the carpet – it’s pretty and can sometimes be helpful, but it’s also not dynamic or functional.</p>
+          <p><a href="blog/html-css.html">Read More</a></p>
+      </div>
+    </article>
+    <article>
+      <div id="post-title">
         <h2>CSS: Getting in the right position</h2>
-        <p class="current-date"><i>18 January 2022</i></p>
+        <p class="current-date"><i>18 January 2023</i></p>
       </div>
       <div id="post-content">
         <p>Positioning CSS elements can be a major headache. The browser has <i>ideas</i> about where things should go, and… well, it’s trying it’s best. Often the best course of action is to just tell it where to put things on the webpage. But there’s a lot of ways of doing that, and picking the right one at the right time can save you from finding fun formatting surprises later on in designing your page.
@@ -33,7 +53,7 @@
     <article>
       <div id="post-title">
         <h2>Identity, Values, and Strengths</h2>
-        <p class="current-date"><i>22 January 2022</i></p>
+        <p class="current-date"><i>22 January 2023</i></p>
       </div>
       <div id="post-content">
         These are a look my my identity, core values, and strengths.
@@ -47,7 +67,7 @@
     <article>
       <div id="post-title">
         <h2>My Learning Plan</h2>
-        <p class="current-date"><i>22 January 2022</i></p>
+        <p class="current-date"><i>22 January 2023</i></p>
       </div>
       <div id="post-content">
         This is my learning plan for Dev Academy.
