Added neuroplasticity and problem solving pages, fixed links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
     <!-- Blog post -->
     <article>
       <div id="post-title">
+        <h2>Neuroplasticity and the Growth Mindset - How to keep growing</h2>
+        <p class="current-date"><i>7 February 2023</i></p>
+      </div>
+      <div id="post-content">
+        <p>Neuroplasticity is the ability for the neurons in your brain to make new connections and reorganize. This is a key process in effective learning, as neural adaptation is the process by which new information is retained. It was at one point thought only to occur during childhood, but it has now been discovered that neuroplasticity is retained through adulthood in many aspects.</p>
+          <p><a href="blog/neuroplasticity.html">Read More</a></p>
+      </div>
+    </article>
+    <article>
+      <div id="post-title">
+        <h2>Problem Solving - A Normal Real Interview</h2>
+        <p class="current-date"><i>7 February 2023</i></p>
+      </div>
+      <div id="post-content">
+        <p>Hello, non-tech friend! It’s time for stories about problem solving methods and my experiences!</p>
+          <p><a href="blog/problem-solving.html">Read More</a></p>
+      </div>
+    </article>
+    <article>
+      <div id="post-title">
         <h2>Emotional Intelligence</h2>
         <p class="current-date"><i>29 January 2023</i></p>
       </div>
@@ -36,7 +56,7 @@
       </div>
       <div id="post-content">
         <p>Web design is like a house. HTML is the foundation and the walls. It’s the base structure, but it’s not exactly functional or helpful in many contexts – not really a house that’s fun to live in. CSS is the paint, the art on the walls, the carpet – it’s pretty and can sometimes be helpful, but it’s also not dynamic or functional.</p>
-          <p><a href="blog/html-css.html">Read More</a></p>
+          <p><a href="blog/js-basics.html">Read More</a></p>
       </div>
     </article>
     <article>
