added foundations reflect and new learning plans, fixed scrolling bug

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     <!-- Blog post -->
     <article>
       <div id="post-title">
+        <h2>Foundations Reflection</h2>
+        <p class="current-date"><i>12 February 2023</i></p>
+      </div>
+      <div id="post-content">
+        <b>What are three new things you have learnt about yourself and your ego due to the core learning?</b>
+        <br>I’ve learned that it’s important to keep an effective balance in my learning mindset – to both appreciate myself and the work I’ve put in, as well as be aware of how enormous and complex fields of study can be, and to use that as a curiosity motivator to keep learning and growing, as opposed to being confident in ability and stagnate, or to be intimidated by my lack of knowledge and give up.
+          <p><a href="blog/foundations-reflection.html">Read More</a></p>
+      </div>
+    </article>
+    <article>
+      <div id="post-title">
         <h2>Neuroplasticity and the Growth Mindset - How to keep growing</h2>
         <p class="current-date"><i>7 February 2023</i></p>
       </div>
